Refactor security components and implement mission management features
- Removed unused AuthEntryPointJwt, JwtAuthFilter, and JwtUtils classes.
- Updated SecurityConfig to use session management with HttpSessionSecurityContextRepository.
- Enhanced GmOrdreMissionService to handle mission creation with validation and participant management.
- Added new controllers: MissionAgentController and ReferentielController for managing mission participants and reference data.
- Introduced DTOs for agent and mission participant data transfer.
- Implemented services for agent, mission agent, resource, and city management.
- Added logging and action journaling for better traceability.
- Updated application properties for session management configuration.